--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="app_name">AllSee</string>
+
     <string name="button_no">No</string>
     <string name="button_yes">Yes</string>
 </resources>
